--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <title>BitcoinTrix - New coin Landing Page</title>
+    <title>Noble Token - New coin Landing Page</title>
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Font  -->
@@ -45,7 +45,9 @@
     <!-- START NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="img-fluid" src="assets/img/logo.png" alt="">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <!-- <img class="img-fluid" src="assets/img/logo.png" alt=""> -->
+NOBLETOKEN
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 MENU
@@ -68,12 +70,12 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#road-map">Road Map</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -161,7 +163,7 @@
                 <!-- end col -->
                 <div class="col-lg-7 col-md-12 col-sm-12">
                     <div class="section-title mt-10">
-                        <h3>About BITCOINTRIX</h3>
+                        <h3>About Noble Token</h3>
                         <span></span>
                         <p>Bitcoin is a revolutionary invention of the last decade. Its essential meaning is money digitization. It became the first decentralized payment network for using without any central authority.</p>
                         <p class="mt-20">bitcoin is the money for Internet. Its original purpose is providing all people with universal currency for different operations without any central authority or middlemen</p>
@@ -222,7 +224,7 @@
         <div class="container">
             <div class="text-center">
                 <div class="section-title">
-                    <h3>BITCOINTRIX ICO Distribution</h3>
+                    <h3>Noble Token ICO Distribution</h3>
                     <span></span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
                 </div>
@@ -232,7 +234,7 @@
                     <!--<img src="img/chart.png" class="pie"-->
                     <div id="container"></div>
                     <div class="center-values">
-                        <span class="phx trix">BITCOINTRIX</span><br>
+                        <span class="phx trix">Noble Token</span><br>
                         <h6 class="margin-btm">27,000,000 </h6>
                         <span class="phx">Total Supply</span>
                     </div>
@@ -240,37 +242,37 @@
 
                 <div class="col-lg-6 col-md-12 col-xs-12 progress-div">
                     <!-- Blue -->
-                    <h6 class="angle-round">Token Pre-Sale <span class="middle-span1">17-03-2021</span><span class="number">1,000,000 BITCOINTRIX</span></h6>
+                    <h6 class="angle-round">Token Pre-Sale <span class="middle-span1">17-03-2021</span><span class="number">1,000,000 Noble Token</span></h6>
                     <div class="progress progress-cls">
                       <div class="progress-bar background-one wid-14">0.7 $</div>
                     </div>
                     
                     <!-- Green -->
-                     <h6 class="angle-round">Round 1 <span class="color-ccc ml-126">30-03-2021</span><span class="number">1,000,000 BITCOINTRIX</span></h6>
+                     <h6 class="angle-round">Round 1 <span class="color-ccc ml-126">30-03-2021</span><span class="number">1,000,000 Noble Token</span></h6>
                     <div class="progress progress-cls">
                       <div class="progress-bar background-two wid-14 bg1">0.9 $</div>
                     </div>
                     
                     <!-- Turquoise -->
-                     <h6 class="angle-round">Round 2 <span class="color-ccc ml-126">04-04-2021</span><span class="number">1,000,000 BITCOINTRIX</span></h6>
+                     <h6 class="angle-round">Round 2 <span class="color-ccc ml-126">04-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
                     <div class="progress progress-cls">
                       <div class="progress-bar background-three wid-14 bg2">0.95 $</div>
                     </div>
                     
                     <!-- Orange -->
-                     <h6 class="angle-round">Round 3 <span class="color-ccc ml-126">09-04-2021</span><span class="number">1,000,000 BITCOINTRIX</span></h6>
+                     <h6 class="angle-round">Round 3 <span class="color-ccc ml-126">09-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
                     <div class="progress progress-cls">
                        <div class="progress-bar wid-14 bg3">1.05 $</div>
                     </div>
                     
                     <!-- Red -->
-                     <h6 class="angle-round">Round 4 <span class="color-ccc ml-126">14-04-2021</span><span class="number">1,000,000 BITCOINTRIX</span></h6>
+                     <h6 class="angle-round">Round 4 <span class="color-ccc ml-126">14-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
                     <div class="progress progress-cls">
                       <div class="progress-bar wid-14 bg4">1.10 $</div>
                     </div>
                     
                     <!-- Red -->
-                     <h6 class="angle-round">Round 5 <span class="color-ccc ml-126">19-04-2021</span><span class="number">1,000,000 BITCOINTRIX</span></h6>
+                     <h6 class="angle-round">Round 5 <span class="color-ccc ml-126">19-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
                     <div class="progress progress-cls">
                       <div class="progress-bar wid-14 bg5">1.20 $</div>
                     </div>
@@ -452,7 +454,7 @@
     <section class="road-map" id="road-map"> 
         <div class="container outer clearfix">
             <div class="section-title">
-                <h3 class="text-center">BitcoinTrix Road Map</h3>
+                <h3 class="text-center">Noble Token Road Map</h3>
                 <span></span>
                 <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
             </div>
@@ -462,7 +464,7 @@
                     <div class="col-md-10 col-md-offset-1 col-sm-12">
                         <div class="timeline section-box-margin">
                             <div class="block block-left">
-                               <h3>BitcoinTrix Development Starts</h3>
+                               <h3>Noble Token Development Starts</h3>
                                <span>MARCH 12, 2021 to Novamber 19, 2020</span>
                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
                             </div>
@@ -474,13 +476,13 @@
                             </div>
 
                             <div class="block block-left mt-30">
-                               <h3>BitcoinTrix Blockchain First Release</h3>
+                               <h3>Noble Token Blockchain First Release</h3>
                                <span>JANUARY 02, 2021 to MARCH 17, 2021</span>
                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
                             </div>
 
                             <div class="block block-right mt-30">
-                               <h3>BitcoinTrix Bank & Cards Phase</h3>
+                               <h3>Noble Token Bank & Cards Phase</h3>
                                <span>APRIL 28, 2021 to MAY 28, 2021</span>
                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
                             </div>
@@ -609,7 +611,7 @@
     <!-- END TESTIMONIAL -->
     
     <!-- START MARKET SHOW -->
-    <section id="blog" class="section-padding">
+    <section id="blog" class="section-padding d-none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -652,7 +654,7 @@
                                 </div>
                             </div>
                             <div class="content-entry">
-                                <a href="#"><h4 class="title">Why I need to choose BitcoinTrix</h4></a>
+                                <a href="#"><h4 class="title">Why I need to choose Noble Token</h4></a>
                                 <div class="event-start-time">
                                     <p>
                                         <span><i class="fa fa-user-o"></i> Admin</span>
@@ -785,7 +787,7 @@
                             </li>
                             <li class="nav-item"><a href="#" data-target="#faq4" data-toggle="tab" class="nav-link">Any discount available ?<i class='icofont icofont-rounded-right'></i></a>
                             </li>
-                            <li class="nav-item"><a href="#" data-target="#faq5" data-toggle="tab" class="nav-link">Can i trade BITCOINTRIX?<i class='icofont icofont-rounded-right'></i></a>
+                            <li class="nav-item"><a href="#" data-target="#faq5" data-toggle="tab" class="nav-link">Can i trade Noble Token?<i class='icofont icofont-rounded-right'></i></a>
                             </li>
                         </ul>
                     </div>
@@ -850,7 +852,7 @@
     <!-- END FAQ -->
 
     <!-- START CONTACT -->
-    <section id="contact" class="section-padding bg-gray">
+    <section id="contact" class="section-padding bg-gray d-none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
