--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <title>Noble Token - New coin Landing Page</title>
     <!-- Bootstrap core CSS -->
@@ -36,17 +37,19 @@
     <div class="preloader">
         <div class="loadscreen">
             <div class="loadscreen-in">
-                <img class="img-fluid" src="assets/img/preloader-logo.png" alt="">
+                <!-- <img class="img-fluid" src="assets/img/preloader-logo.png" alt=""> -->
+                NOBLETOKEN
             </div>
         </div>
     </div>
     <!-- END PRELOADER -->
 
     <!-- START NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
+ 
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top  " id="mainNav">
+        <div class="container" class='pd-2'>
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <!-- <img class="img-fluid" src="assets/img/logo.png" alt=""> -->
+                 <!-- <img class="img-fluid" src="assets/img/logo.png" alt="">  -->
 NOBLETOKEN
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,24 +73,21 @@ NOBLETOKEN
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#road-map">Road Map</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-                    </li> -->
+                   
                 </ul>
             </div>
         </div>
     </nav>
+
+  
     <!-- END NAVBAR -->
 
    
     <!-- START SLIDER STATIC -->
     <section id="home" class="home-static-1 rocke rocket section-back-image home-static-2 " data-background="assets/img/bg/home-static-4.jpg" >
        
-        <div class="ray ray-horizontal y-35 x-0 ray-rotate-45 laser-blink hidden-sm hidden-xs"></div>
-        <div class="ray ray-vertical y-100 x-50 ray-rotate-135 laser-blink hidden-sm hidden-xs"></div>
+        <!-- <div class="ray ray-horizontal y-35 x-0 ray-rotate-45 laser-blink hidden-sm hidden-xs"></div>
+        <div class="ray ray-vertical y-100 x-50 ray-rotate-135 laser-blink hidden-sm hidden-xs"></div> -->
         <div class="container no-padding">
             <div class="row header-content">
                 <!--- END COL -->
@@ -95,19 +95,21 @@ NOBLETOKEN
                     
                     <div class="message-slider owl-carousel owl-theme">
                         <div class="message-slider-text">
-                            <h1>ICO and Crypto Trading</h1>
+                            <h1>Noble Gift Token</h1>
                         </div>
                         <div class="message-slider-text">
                             <h1>The Money of The Future</h1>
                         </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipis <br>lendus quae eum praesentium deserunt </p>
+                    <p>A Crypto Assets for the BELBIRA community</p>
 
-                    <div class="header-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic autem laborum, iusto quis sapiente! Corporis quia sit doloremque harum modi distinctio perspiciatis molestiae a quo soluta quidem, fugiat ad tempora.</div>
+                    <div class="header-desc">
+                        Prizes and Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. In the future, it will be used as a transaction tool for community members and outside the community, especially game transactions and product transactions in a NOBLE store marketplace. 0.5% automatic token burning occurs every transaction and 1% through NOBLE Gamer and NOBLE Store transactions.
+                    </div>
                     
                     <div class="home-btn-wrapper">
                         <a href="#about" class="js-scroll-trigger btn-home">READ MORE</a>
-                        <a href="#registration" class="js-scroll-trigger btn-home-2">Buy More Tokens</a>
+                        <a href="#registration" class="js-scroll-trigger btn-home">Buy NOBLE</a>
                     </div>
                 </div>
                 <!--- END COL -->
@@ -165,8 +167,7 @@ NOBLETOKEN
                     <div class="section-title mt-10">
                         <h3>About Noble Token</h3>
                         <span></span>
-                        <p>Bitcoin is a revolutionary invention of the last decade. Its essential meaning is money digitization. It became the first decentralized payment network for using without any central authority.</p>
-                        <p class="mt-20">bitcoin is the money for Internet. Its original purpose is providing all people with universal currency for different operations without any central authority or middlemen</p>
+                        <p>Prizes and Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. In the future, it will be used as a transaction tool for community members and outside the community, especially game transactions and product transactions in a NOBLE store marketplace. 0.5% automatic token burning occurs every transaction and 1% through NOBLE Gamer and NOBLE Store transactions.</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
