--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
     <!-- START NAVBAR -->
  
     <nav class="navbar navbar-expand-lg navbar-light fixed-top  " id="mainNav">
-        <div class="container" class='pd-2'>
+        <div class="container"  style='padding:5px'>
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                  <!-- <img class="img-fluid" src="assets/img/logo.png" alt="">  -->
 NOBLETOKEN
