--- a/views/home.ejs
+++ b/views/home.ejs
@@ -143,7 +143,7 @@ NOBLETOKEN
                     var s = document.createElement("script");
                     s.type = "text/javascript";
                     s.async = true;
-                    var theUrl = baseUrl + 'serve/v3/coin/header?fsyms=BTC,ETH,XMR,LTC,DASH&tsyms=BTC,USD,CNY,EUR';
+                    var theUrl = baseUrl + 'serve/v3/coin/header?fsyms=BTC,ETH,BNB,LTC,DASH,DOGE,BLOK,SAND,SOL,TOKO&tsyms=USD';
                     s.src = theUrl + (theUrl.indexOf("?") >= 0 ? "&" : "?") + "app=" + appName;
                     embedder.parentNode.appendChild(s);
                 })();
@@ -225,7 +225,7 @@ NOBLETOKEN
         <div class="container">
             <div class="text-center">
                 <div class="section-title">
-                    <h3>Noble Token ICO Distribution</h3>
+                    <h3>Noble Tokenomic</h3>
                     <span></span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
                 </div>
@@ -235,48 +235,42 @@ NOBLETOKEN
                     <!--<img src="img/chart.png" class="pie"-->
                     <div id="container"></div>
                     <div class="center-values">
-                        <span class="phx trix">Noble Token</span><br>
-                        <h6 class="margin-btm">27,000,000 </h6>
+                        <span class="phx trix">NOBLE</span><br>
+                        <h6 class="margin-btm">27,999 T </h6>
                         <span class="phx">Total Supply</span>
                     </div>
                 </div>
 
                 <div class="col-lg-6 col-md-12 col-xs-12 progress-div">
+
+                   
+
+
                     <!-- Blue -->
-                    <h6 class="angle-round">Token Pre-Sale <span class="middle-span1">17-03-2021</span><span class="number">1,000,000 Noble Token</span></h6>
+                    <h6 class="angle-round">Liquidity  <span class="number">2,799,999 B NOBLE</span></h6>
                     <div class="progress progress-cls">
-                      <div class="progress-bar background-one wid-14">0.7 $</div>
+                      <div class="progress-bar " style="width: 10%;"  role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" >10% </div>
                     </div>
                     
                     <!-- Green -->
-                     <h6 class="angle-round">Round 1 <span class="color-ccc ml-126">30-03-2021</span><span class="number">1,000,000 Noble Token</span></h6>
+                     <h6 class="angle-round">Team <span class="number">8,399,999 B NOBLE</span></h6>
                     <div class="progress progress-cls">
-                      <div class="progress-bar background-two wid-14 bg1">0.9 $</div>
+                      <div class="progress-bar " style="width: 30%;"  role="progressbar"  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
                     </div>
                     
                     <!-- Turquoise -->
-                     <h6 class="angle-round">Round 2 <span class="color-ccc ml-126">04-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
+                     <h6 class="angle-round">Community reward<span class="number">15,399,999 B NOBLE</span></h6>
                     <div class="progress progress-cls">
-                      <div class="progress-bar background-three wid-14 bg2">0.95 $</div>
+                      <div class="progress-bar   bg2"  role="progressbar"   style="width: 55%;"   aria-valuemin="0" aria-valuemax="100">55%</div>
                     </div>
                     
                     <!-- Orange -->
-                     <h6 class="angle-round">Round 3 <span class="color-ccc ml-126">09-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
+                     <h6 class="angle-round">Charity  <span class="number">1,399,999 B NOBLE</span></h6>
                     <div class="progress progress-cls">
-                       <div class="progress-bar wid-14 bg3">1.05 $</div>
+                       <div class="progress-bar   bg3"  style="width: 5%;"  aria-valuemin="0" aria-valuemax="100">5% </div>
                     </div>
                     
-                    <!-- Red -->
-                     <h6 class="angle-round">Round 4 <span class="color-ccc ml-126">14-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
-                    <div class="progress progress-cls">
-                      <div class="progress-bar wid-14 bg4">1.10 $</div>
-                    </div>
                     
-                    <!-- Red -->
-                     <h6 class="angle-round">Round 5 <span class="color-ccc ml-126">19-04-2021</span><span class="number">1,000,000 Noble Token</span></h6>
-                    <div class="progress progress-cls">
-                      <div class="progress-bar wid-14 bg5">1.20 $</div>
-                    </div>
                             
                        
                 </div>
