--- a/views/home.ejs
+++ b/views/home.ejs
@@ -562,7 +562,7 @@
     <div class="clearfix"></div>
 
     <!-- START PROMO VIDEO -->
-    <section id="boucher" class="section-padding section-back-image" data-background="assets/img/bg/promo-bg-2.jpg">
+    <section id="boucher" class="section-padding section-back-image d-none" data-background="assets/img/bg/promo-bg-2.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -585,7 +585,7 @@
 
 
     <!-- START TESTIMONIAL -->
-    <section id="testimonial" class="section-padding bg-gray">
+    <section id="testimonial" class="section-padding bg-gray d-none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
