--- a/views/home.ejs
+++ b/views/home.ejs
@@ -64,10 +64,10 @@
                         <a class="nav-link js-scroll-trigger" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+                        <a class="nav-link js-scroll-trigger" href="#faq">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#how-it-work">Get Strarted</a>
+                        <a class="nav-link js-scroll-trigger" href="#tokenomic">Tokenomic</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#road-map">Road Map</a>
@@ -216,7 +216,42 @@
                         <p>Prizes and Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. In the future, it will be used as a transaction tool for community members and outside the community,
                             especially game transactions and product transactions in a NOBLE store marketplace. 0.1% automatic token burning occurs every transaction and 1% through NOBLE Gamer and NOBLE Store transactions.</p>
                     </div>
-                    <div class="row">
+
+
+                    <div class="col-md-12   mt-3">
+                        <div class="download-text text-left">
+
+                            <div class="color-white row">
+                                <div class="col-12 col-md-4 font-weight-bold">Network</div>
+                                <div class="col-12 col-md-8 text-success">Binance Smart Chain ( BEP20 )</div>
+                            </div>
+                            <div class="color-white row">
+                                <div class="col-12 col-md-4 font-weight-bold">Contract</div>
+                                <div class="col-12 col-md-8 text-success ">0x52a05b8801f314e9aaeb53a905ff0f4762cb0081</div>
+                            </div>
+                            <div class="color-white row">
+                                <div class="col-12 col-md-4 font-weight-bold">Name</div>
+                                <div class="col-12 col-md-8 text-success">Noble Gift Token</div>
+                            </div>
+                            <div class="color-white row">
+                                <div class="col-12 col-md-4 font-weight-bold">Symbol</div>
+                                <div class="col-12 col-md-8 text-success">NOBLE</div>
+                            </div>
+                            <div class="color-white row">
+                                <div class="col-12 col-md-4 font-weight-bold">Int & Max Supply</div>
+                                <div class="col-12 col-md-8 text-success">27,999,999,999,000,000 NOBLE</div>
+                            </div>
+                            <div class="color-white row">
+                                <div class="col-12 col-md-4 font-weight-bold">Decimal</div>
+                                <div class="col-12 col-md-8 text-success">0</div>
+                            </div>
+
+
+
+                        </div>
+                    </div>
+
+                    <!-- <div class="row" class="d-none">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                             <div class="single-feature">
                                 <div class="single-feature-icon">
@@ -257,7 +292,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- end col -->
             </div>
@@ -268,7 +303,7 @@
     <!-- END ABOUT -->
 
 
-    <section class="ico-distribution bird-background" id="sale">
+    <section class="ico-distribution bird-background" id="tokenomic">
         <div class="container">
             <div class="text-center">
                 <div class="section-title">
@@ -396,7 +431,7 @@
     <!-- <div class="clearfix"></div> -->
 
 
-    <section class="our-service mt-5" id="services">
+    <section class="our-service mt-5 d-none" id="services">
         <div class="container">
             <div class="text-center">
                 <div class="section-title">
@@ -471,7 +506,7 @@
         </div>
     </section>
 
-    <div class="seo-counter">
+    <div class="seo-counter d-none ">
         <div class="main-content">
             <img src="assets/img/elements/object1.png" alt="Image">
             <div class="container">
@@ -519,7 +554,7 @@
             <div class="section-title">
                 <h3 class="text-center">Noble Token Road Map</h3>
                 <span></span>
-                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+                <p class="text-center"> NOBLE is a BELBIRA community token, committed to a sustainable project for the long term.</p>
             </div>
             <div class="row">
 
@@ -528,26 +563,51 @@
                         <div class="timeline section-box-margin">
                             <div class="block block-left">
                                 <h3>Noble Token Development Starts</h3>
-                                <span>MARCH 12, 2021 to Novamber 19, 2020</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
+                                <span>FEBRUARY  2022</span>
+                                <p>Started drafting and team building for Noble Gift Token.</p>
                             </div>
 
                             <div class="block block-right mt-30">
-                                <h3>Groundwork Preparation for ICO</h3>
-                                <span>DECAMBER 3, 2020 to DECAMBER 23, 2020</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
+                                <h3>Website And Token Deployer</h3>
+                                <span>MARCH 2022</span>
+                                <p>Finishing website and TGE.</p>
                             </div>
 
                             <div class="block block-left mt-30">
-                                <h3>Noble Token Blockchain First Release</h3>
-                                <span>JANUARY 02, 2021 to MARCH 17, 2021</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
+                                <h3>NOBLE Listing Exchange</h3>
+                                <span>APRIL 2022</span>
+                                <p>Noble token list at Dex-Trade Exchange.</p>
                             </div>
 
                             <div class="block block-right mt-30">
-                                <h3>Noble Token Bank & Cards Phase</h3>
-                                <span>APRIL 28, 2021 to MAY 28, 2021</span>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto adipisci provident officia animi. Impedit dicta, veniam quae in, animi autem illum eos tempore iste a nisi.</p>
+                                <h3>List at CMC & Coingecko</h3>
+                                <span>MAY 2022</span>
+                                <p>List on Coinmarketcap</p>
+                                <p>List on Coingecko</p>
+                            </div>
+
+                            <div class="block block-left mt-30">
+                                <h3>NOBLE Gift distribution</h3>
+                                <span>JUNE 2022</span>
+                                <p>Send GIFT ( NOBLE ) to BELBIRA Community.</p>
+                            </div>
+
+                            <div class="block block-right mt-30">
+                                <h3>BBC99</h3>
+                                <span>2023</span>
+                                <p>Crypto & blockchain education for local BELBIRA Community.</p>
+                            </div>
+
+                            <div class="block block-left mt-30">
+                                <h3>NOBLE Gamer</h3>
+                                <span>2024</span>
+                                <p>Game development based on decentralized system and play 2 earn.</p>
+                            </div>
+
+                            <div class="block block-right mt-30">
+                                <h3>NOBLE Store</h3>
+                                <span>2025</span>
+                                <p>Marketplace for all types of items such as Tokopedia, Bukalapak and Shopee.</p>
                             </div>
                             <div class="circle"></div>
                         </div>
@@ -841,7 +901,9 @@
                     <div class="section-title">
                         <h3>Ask Question?</h3>
                         <span></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+                        <p>
+                            Get to know us in more detail with the following FAQ
+                        </p>
                     </div>
                 </div>
                 <!-- end col -->
@@ -849,14 +911,14 @@
                 <div class="row faq-tab">
                     <div class="col-lg-4 col-md-12 col-sm-12 col-12">
                         <ul class="nav nav-tabs">
-                            <li class="nav-item"><a href="#" data-target="#faq1" data-toggle="tab" class="nav-link active">WHAT IS ICO? 
+                            <li class="nav-item"><a href="#" data-target="#faq1" data-toggle="tab" class="nav-link active">WHAT IS NOBLE? 
                                     <i class='icofont icofont-rounded-right'></i></a>
                             </li>
-                            <li class="nav-item"><a href="#" data-target="#faq2" data-toggle="tab" class="nav-link">What problem are you solving?<i class='icofont icofont-rounded-right'></i></a>
+                            <li class="nav-item"><a href="#" data-target="#faq2" data-toggle="tab" class="nav-link">What is BELBIRA?<i class='icofont icofont-rounded-right'></i></a>
                             </li>
-                            <li class="nav-item"><a href="#" data-target="#faq3" data-toggle="tab" class="nav-link">How to add tokens to a wallet?<i class='icofont icofont-rounded-right'></i></a>
+                            <li class="nav-item"><a href="#" data-target="#faq3" data-toggle="tab" class="nav-link">How to get NOBLE?<i class='icofont icofont-rounded-right'></i></a>
                             </li>
-                            <li class="nav-item"><a href="#" data-target="#faq4" data-toggle="tab" class="nav-link">Any discount available ?<i class='icofont icofont-rounded-right'></i></a>
+                            <li class="nav-item"><a href="#" data-target="#faq4" data-toggle="tab" class="nav-link">This is REAL Project ?<i class='icofont icofont-rounded-right'></i></a>
                             </li>
                             <li class="nav-item"><a href="#" data-target="#faq5" data-toggle="tab" class="nav-link">Can i trade Noble Token?<i class='icofont icofont-rounded-right'></i></a>
                             </li>
@@ -865,50 +927,39 @@
                     <!-- end col -->
                     <div class="col-lg-8 col-md-12 col-sm-12 col-12">
                         <div class="tab-content">
-                            <div id="faq1" class="tab-pane fade">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <hr>
+                            <div id="faq1" class="tab-pane fade active show">
+                                <h4>What is NOBLE</h4>
+                                <p>
+                                    NOBLE Token is Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. In the future, it will be used as a transaction tool for community members and outside the community, especially
+                                    game transactions and product transactions in a NOBLE store marketplace. 0.1% automatic token burning occurs every transaction and 1% through NOBLE Gamer and NOBLE Store transactions.
+                                </p>
 
                             </div>
-                            <div id="faq2" class="tab-pane fade">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <ul class="list-group">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
-                                </ul>
+                            <div id="faq3" class="tab-pane fade">
+                                <h4>How to get NOBLE</h4>
+                                <p>
+                                    NOBLE is given for free to BELBIRA users, by shopping at belbira, you will get free NOBLE.
+                                </p>
                             </div>
-                            <div id="faq3" class="tab-pane fade active show">
+                            <div id="faq2" class="tab-pane fade ">
                                 <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer adipiscing elit, sed diam nonummy nibh.</p>
-                                <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <hr>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <hr>
+                                <p>
+                                    BELBIRA is a local grocery store with thousands of regular customers spread across various locations in Indonesia
+                                </p>
                             </div>
                             <div id="faq4" class="tab-pane fade">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                                <hr>
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-
+                                <h4>This is REAL Project ?</h4>
+                                <p>
+                                    Yes, NOBLE is made with no presale and private sale, we give NOBLE tokens for free to BELBIRA customers.
+                                </p>
                             </div>
                             <div id="faq5" class="tab-pane fade">
-                                <h4>Lorem ipsum dolor sit amet</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                                <h4>Can i trade Noble Token</h4>
+                                <p>Yes You can trade NOBLE at.</p>
                                 <ul class="list-group">
-                                    <li class="list-group-item">Cras justo odio</li>
-                                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                                    <li class="list-group-item">Morbi leo risus</li>
+                                    <li class="list-group-item">Dex-trade.com</li>
+                                    <li class="list-group-item">Pancakeswap</li>
+
                                 </ul>
                             </div>
                         </div>
@@ -990,7 +1041,7 @@
                         <div class="footer-widget about-widget">
                             <h3 class="has-line-center">About Us</h3>
                             <div class="widget-content">
-                                <div class="text">At the end of the day, going forward, a new normal that has evolved generation X is on the runway heading towards a streamlined cloud solution. </div>
+                                <div class="text">NOBLE Token is Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. </div>
                                 <ul class="social-links">
                                     <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
                                     <li><a href="#"><span class="fa fa-twitter"></span></a></li>
@@ -1012,9 +1063,8 @@
                                     <li>
                                         <div class="icon"><img src="assets/img/elements/support.png" alt="icon"></div>
                                     </li>
-                                    <li>10, Mc Donald Avenue, Sunset Park, Newyork</li>
-                                    <li>+99 999 9999</li>
-                                    <li>info@yourdomain.com</li>
+
+                                    <li>admin@nobletoken.io</li>
                                 </ul>
                             </div>
                         </div>
