--- a/views/home.ejs
+++ b/views/home.ejs
@@ -733,6 +733,8 @@
     </section>
     <!-- END TESTIMONIAL -->
 
+
+
     <!-- START MARKET SHOW -->
     <section id="blog" class="section-padding d-none">
         <div class="container">
@@ -972,6 +974,102 @@
         <!--- END CONTAINER -->
     </section>
     <!-- END FAQ -->
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+    <section id="team" class="section-padding bg-gray ">
+        <div class="container bootdey mb-5 ">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <div class="section-title mb-4 pb-2">
+                        <h4 class="title mb-4">Our Business Minds</h4>
+                        <p class="text-muted para-desc mx-auto mb-0">Our amazing Team.</p>
+                    </div>
+                </div>
+                <!--end col-->
+            </div>
+            <!--end row-->
+
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
+                    <div class="team text-center rounded p-3 py-4">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                        <div class="content mt-3">
+                            <h4 class="title mb-0">Lisa Martin</h4>
+                            <small class="text-muted">Founder</small>
+                            <ul class="list-unstyled mt-3 social-icon social mb-0">
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
+                            </ul>
+                            <!--end icon-->
+                        </div>
+                    </div>
+                </div>
+                <!--end col-->
+
+                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
+                    <div class="team text-center rounded p-3 py-4">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar8.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                        <div class="content mt-3">
+                            <h4 class="title mb-0">Calvin Carlo</h4>
+                            <small class="text-muted">C.E.O.</small>
+                            <ul class="list-unstyled mt-3 social-icon social mb-0">
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
+                            </ul>
+                            <!--end icon-->
+                        </div>
+                    </div>
+                </div>
+                <!--end col-->
+
+                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
+                    <div class="team text-center rounded p-3 py-4">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                        <div class="content mt-3">
+                            <h4 class="title mb-0">Richha Jotchi</h4>
+                            <small class="text-muted">Manager</small>
+                            <ul class="list-unstyled mt-3 social-icon social mb-0">
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
+                            </ul>
+                            <!--end icon-->
+                        </div>
+                    </div>
+                </div>
+                <!--end col-->
+
+                <div class="col-lg-3 col-md-6 col-12 mt-4 pt-2">
+                    <div class="team text-center rounded p-3 py-4">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar6.png" class="img-fluid avatar avatar-medium shadow rounded-pill" alt="">
+                        <div class="content mt-3">
+                            <h4 class="title mb-0">Cristino Murfy</h4>
+                            <small class="text-muted">Accountant</small>
+                            <ul class="list-unstyled mt-3 social-icon social mb-0">
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-facebook" title="Facebook"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-instagram" title="Instagram"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-twitter" title="Twitter"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-google-plus" title="Google +"></i></a></li>
+                                <li class="list-inline-item"><a href="javascript:void(0)" class="rounded"><i class="mdi mdi-linkedin" title="Linkedin"></i></a></li>
+                            </ul>
+                            <!--end icon-->
+                        </div>
+                    </div>
+                </div>
+                <!--end col-->
+            </div>
+            <!--end row-->
+        </div>
+    </section>
 
     <!-- START CONTACT -->
     <section id="contact" class="section-padding bg-gray d-none">
