--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover">
+
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <title>Noble Token - New coin Landing Page</title>
     <!-- Bootstrap core CSS -->
@@ -33,14 +35,14 @@
 <body id="page-top">
 
     <!-- START PRELOADER -->
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="loadscreen">
             <div class="loadscreen-in">
-                <!-- <img class="img-fluid" src="assets/img/preloader-logo.png" alt=""> -->
+                <img class="img-fluid" src="assets/img/preloader-logo.png" alt="">
                 NOBLETOKEN
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- END PRELOADER -->
 
     <!-- START NAVBAR -->
@@ -1130,47 +1132,18 @@
     =======================================-->
     <footer class="main-footer footer-style-two text-center">
         <!--Widgets Section-->
-        <div class="widgets-section padding-top-small padding-bottom-small">
+        <div class="widgets-section padding-top-small padding-bottom-small" style="padding-top:0px">
             <div class="container">
 
                 <div class="row clearfix">
                     <!--Footer Column-->
-                    <div class="footer-column col-md-4 col-sm-6 col-xs-12">
-                        <div class="footer-widget about-widget">
-                            <h3 class="has-line-center">About Us</h3>
-                            <div class="widget-content">
-                                <div class="text">NOBLE Token is Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. </div>
-                                <ul class="social-links">
-                                    <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+
                     <!--End Footer Column-->
 
-                    <!--Footer Column-->
-                    <div class="footer-column col-md-4 col-sm-6 col-xs-12">
-                        <div class="footer-widget contact-widget">
-                            <h3 class="has-line-center">Contact Us</h3>
-                            <div class="widget-content">
-                                <ul class="contact-info">
-                                    <li>
-                                        <div class="icon"><img src="assets/img/elements/support.png" alt="icon"></div>
-                                    </li>
 
-                                    <li>admin@nobletoken.io</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Footer Column-->
 
                     <!--Footer Column-->
-                    <div class="footer-column col-md-4 col-sm-12 col-xs-12">
+                    <div class="footer-column mt-3 pt-5 col-md-4 col-sm-6 col-xs-12">
                         <div class="footer-widget newsletter-widget">
                             <h3 class="has-line-center">Newsletter</h3>
                             <div class="widget-content">
@@ -1187,6 +1160,39 @@
                         </div>
                     </div>
                     <!--End Footer Column-->
+
+                    <!--Footer Column-->
+                    <div class="footer-column mt-3 pt-5 col-md-4 col-sm-6 col-xs-12">
+                        <div class="footer-widget contact-widget">
+                            <h3 class="has-line-center">Contact Us</h3>
+                            <div class="widget-content">
+                                <ul class="contact-info">
+                                    <li>
+                                        <div class="icon"><img src="assets/img/elements/support.png" alt="icon"></div>
+                                    </li>
+
+                                    <li>admin@nobletoken.io</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!--End Footer Column-->
+
+                    <div class="footer-column mt-3 pt-5 col-md-4 col-sm-12 col-xs-12">
+                        <div class="footer-widget about-widget">
+                            <h3 class="has-line-center">About Us</h3>
+                            <div class="widget-content">
+                                <div class="text">NOBLE Token is Assets are kept for the BELBIRA Business community with a potential number of hundreds of millions of members in Indonesia. </div>
+                                <ul class="social-links">
+                                    <li><a href="#"><span class="fa fa-facebook-f"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                                    <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
